--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   #mongodb:
   #  image: mongo
@@ -6,6 +6,17 @@ services:
   #  - 27017:27017
   #  networks:
   #    - my-network
+  patient:
+    image: patient
+    container_name: patient
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    restart: always
+    networks:
+      - my-network
   note:
     depends_on:
       - patient
@@ -16,16 +27,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8082:8082"
-    restart:  always
-    networks:
-      - my-network
-  patient:
-    image: patient
-    container_name: patient
-    build:
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
     restart:  always
     networks:
       - my-network
