--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=8080
 # Actuator
 # ===============================
 
-management.server.port=8090
-management.endpoints.web.exposure.include=health, metrics, info, trace
-management.endpoint.health.show-details=always
-management.trace.http.include=PRINCIPAL
+#management.server.port=8090
+#management.endpoints.web.exposure.include=health, metrics, info, trace
+#management.endpoint.health.show-details=always
+#management.trace.http.include=PRINCIPAL
 
 # ===============================
 # TYYMELEAF
@@ -39,9 +39,6 @@ spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeB
 
 #Version Locale
 #spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
-
-#spring.datasource.username=p9
-#spring.datasource.password=p9
 
 spring.datasource.username=root
 spring.datasource.password=RootRoot_
